syntax = "proto3"; 

package greet; 

option go_package = "github.com/svrajput/grpc_go_course/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string response = 1; 
}

service  GreetService {
    rpc Greet(GreetRequest) returns(GreetResponse); 
    rpc GreetManyTimes(GreetRequest)  returns( stream GreetResponse); 
    rpc LongGreet(stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryOne(stream GreetRequest) returns (stream GreetResponse);  
} 